--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 	</head>
 	
 	<body>
-		<embed src="CV.pdf" type="application/pdf">
+		<embed src="Rasmus Davidsen - CV.pdf" type="application/pdf">
 	</body>
 </html>
